# guru_intro

./: .env.sample  Dockerfile  README.MD  docker-compose.yml  pyproject.toml  reqres_service.py  test_users.py
.github/workflows/: release.yml  test.yml
app/: main.py
app/database/: engine.py  users.py
app/models/: AppStatus.py  User.py
app/routers/: status.py  users.py
models/: AppStatus.py
tests/: conftest.py  test_api.py  test_smoke.py  test_users.py
