[tool.poetry]
name = "guru-intro"
version = "0.1.0"
description = ""
authors = ["Линара Абдрашитова <Linara.Abdrashitova@nexign.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.116.1"}
email-validator = "^2.2.0"
pydantic = "^2.11.7"
uvicorn = "^0.35.0"
dotenv = "^0.9.9"
requests = "^2.32.4"
fastapi-pagination = "^0.13.3"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.43"
sqlmodel = "^0.0.24"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = "."